--- a/surprise.html
+++ b/surprise.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>สำหรับเธอ </title>
+<title>สำหรับเธอ</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500&family=Playfair+Display&display=swap" rel="stylesheet">
 
 <style>
 *{
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family:'Prompt', sans-serif;
+  font-family:'Sarabun', sans-serif;
 }
 
 body{
   height:100vh;
-  background:linear-gradient(180deg,#fff0f6,#ffe4ec);
+  background-color:#ffe6ee;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -32,11 +32,11 @@ body{
 }
 
 @keyframes float{
-  0%,100%{ transform:translateY(0);}
-  50%{ transform:translateY(-18px);}
+  0%,100%{ transform:translateY(0); }
+  50%{ transform:translateY(-18px); }
 }
 
-/* 💌 overlay */
+/* overlay */
 .overlay{
   position:fixed;
   inset:0;
@@ -54,70 +54,68 @@ body{
   pointer-events:auto;
 }
 
-/* 💎 การ์ด */
+/* 🌷 การ์ด */
 .card{
-  width:30%;
-  max-width:340px;
-  background:rgba(255,255,255,0.96);
-  border-radius:0px;
-  padding:22px 20px 26px;
-  box-shadow:0 20px 60px rgba(255,120,170,0.25);
+  width:85%;
+  max-width:500px;
+  background:#f7f7f4;
+  border-radius:6px;
+  padding:40px 30px;
   text-align:center;
-
-  transform:scale(0.9);
+  box-shadow:0 10px 40px rgba(0,0,0,0.08);
+  transform:translateY(40px);
   opacity:0;
-  transition:0.4s ease;
+  transition:0.5s ease;
 }
 
 .overlay.show .card{
-  transform:scale(1);
+  transform:translateY(0);
   opacity:1;
 }
 
-/* 📸 รูป */
+.card h2{
+  font-family:'Playfair Display',serif;
+  font-size:20px;
+  color:#c86b6b;
+  margin-bottom:20px;
+  font-weight:500;
+}
+
 .card img{
-  width:100%;
-  border-radius:0px;
-  margin-bottom:0px;
+  width:220px;
+  margin:15px auto 25px;
+  display:block;
+  border-radius:4px;
 }
 
-/* ✨ ข้อความ */
 .text{
-  font-family:'Sarabun', sans-serif;
-  font-size:19px;
-  line-height:1.7;
-  color:#ff4f8b;
+  font-size:14px;
+  color:#666;
+  line-height:1.8;
+  margin-bottom:25px;
   min-height:70px;
+  white-space:pre-line;
 }
 
-/* 🔘 ปุ่มล่าง */
 .bottom-btn{
-  display:inline-block;
-  margin-top:20px;
-  padding:10px 28px;
-  border-radius:22px;
-  background:#ff6fa5;
-  color:white;
-  font-size:14px;
+  font-size:13px;
+  color:#777;
   cursor:pointer;
-
+  background:none;
+  border:none;
   opacity:0;
-  transform:translateY(12px);
-  pointer-events:none;
-  transition:0.4s ease;
+  transition:0.3s ease;
 }
 
 .bottom-btn.show{
   opacity:1;
-  transform:translateY(0);
-  pointer-events:auto;
 }
 
 .bottom-btn:hover{
-  background:#ff4f8b;
+  text-decoration:underline;
 }
 
-/* 💖 container */
+/* 💗 หัวใจ */
 .hearts{
   position:fixed;
   inset:0;
@@ -125,7 +123,6 @@ body{
   overflow:hidden;
 }
 
-/* 💗 หัวใจแต่ละดวง */
 .heart{
   position:absolute;
   bottom:-20px;
@@ -144,14 +141,6 @@ body{
     opacity:0;
   }
 }
-
-
-/* 📱 Tablet+ */
-@media(min-width:768px){
-  .flower{ width:500px; }
-  .card{ max-width:380px; }
-  .text{ font-size:15px; }
-}
 </style>
 </head>
 
@@ -161,48 +150,43 @@ body{
 
 <div class="overlay" id="overlay">
   <div class="card">
+    <h2>Happy Valentine's Day!</h2>
     <img src="img/couple.png">
     <div class="text" id="text"></div>
-
-    <div class="bottom-btn" id="closeBtn" onclick="closeCard()">
-      ปิด
-    </div>
+    <button class="bottom-btn" id="closeBtn" onclick="closeCard()">ปิด</button>
   </div>
 </div>
 
 <div class="hearts" id="hearts"></div>
 
-
-<script>const message = `วาเลนไทน์ปีที่ 3 ของเราแล้วนะ 
+<script>
+const message = `วาเลนไทน์ปีที่ 3 ของเราแล้วนะ 
 
 สามปีที่ผ่านมาอาจมีทั้งวันที่หัวเราะดัง ๆ และวันที่เงียบงันบ้าง 
 แต่ทุกช่วงเวลาที่มีเธออยู่ข้าง ๆ มันอบอุ่นและพิเศษเสมอ
 
-ขอบคุณที่ยังจับมือกันอยู่ตรงนี้ ขอบคุณที่ไม่ปล่อยกันไปไหน 
- `;
+ขอบคุณที่ยังจับมือกันอยู่ตรงนี้ ขอบคุณที่ไม่ปล่อยกันไปไหน`;
 
 let i = 0;
 let typingTimeout;
+let heartInterval;
 
 const overlay = document.getElementById('overlay');
 const textEl = document.getElementById('text');
 const closeBtn = document.getElementById('closeBtn');
-let heartInterval;
 
 function openCard(){
   overlay.classList.add('show');
   resetCard();
   typeText();
-  startHearts();   // เริ่มหัวใจ
+  startHearts();
 }
 
 function closeCard(){
   overlay.classList.remove('show');
   clearTimeout(typingTimeout);
-  resetCard();
-  stopHearts();    // หยุดหัวใจ
+  stopHearts();
 }
-
 
 function resetCard(){
   textEl.innerHTML = "";
@@ -214,7 +198,7 @@ function typeText(){
   if(i < message.length){
     textEl.innerHTML += message.charAt(i);
     i++;
-    typingTimeout = setTimeout(typeText, 80);
+    typingTimeout = setTimeout(typeText, 60);
   }else{
     closeBtn.classList.add('show');
   }
@@ -231,9 +215,7 @@ function createHeart(){
 
   document.getElementById("hearts").appendChild(heart);
 
-  setTimeout(() => {
-    heart.remove();
-  }, 7000);
+  setTimeout(() => heart.remove(), 7000);
 }
 
 function startHearts(){
@@ -243,11 +225,7 @@ function startHearts(){
 function stopHearts(){
   clearInterval(heartInterval);
 }
-
 </script>
-
-
 
 </body>
 </html>
-
